BIFANG/BIFANGParser/BIFANGParser.cpp

// Generated from D:/CLionProjects/BIFANG/BIFANGParser.g4 by ANTLR 4.13.1


#include "BIFANGParserListener.h"
#include "BIFANGParserVisitor.h"

#include "BIFANGParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BIFANGParserStaticData final {
  BIFANGParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BIFANGParserStaticData(const BIFANGParserStaticData&) = delete;
  BIFANGParserStaticData(BIFANGParserStaticData&&) = delete;
  BIFANGParserStaticData& operator=(const BIFANGParserStaticData&) = delete;
  BIFANGParserStaticData& operator=(BIFANGParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag bifangparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
BIFANGParserStaticData *bifangparserParserStaticData = nullptr;

void bifangparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (bifangparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(bifangparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BIFANGParserStaticData>(
    std::vector<std::string>{
      "program", "compUnit", "decl", "constDecl", "bType", "constDef", "constInitVal", 
      "varDecl", "varDef", "initVal", "funcDef", "funcType", "funcFParams", 
      "funcFParam", "block", "blockItem", "stmt", "exp", "cond", "lVal", 
      "number", "unaryOp", "funcRParams", "param", "constExp"
    },
    std::vector<std::string>{
      "", "'const'", "'int'", "'float'", "'void'", "'if'", "'else'", "'while'", 
      "'break'", "'continue'", "'return'", "'+'", "'-'", "'*'", "'/'", "'%'", 
      "'='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", "'&&'", 
      "'||'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'"
    },
    std::vector<std::string>{
      "", "CONST", "INT", "FLOAT", "VOID", "IF", "ELSE", "WHILE", "BREAK", 
      "CONTINUE", "RETURN", "PLUS", "MINUS", "MUL", "DIV", "MOD", "ASSIGN", 
      "EQ", "NEQ", "LT", "GT", "LE", "GE", "NOT", "AND", "OR", "L_PAREN", 
      "R_PAREN", "L_BRACE", "R_BRACE", "L_BRACKT", "R_BRACKT", "COMMA", 
      "SEMICOLON", "IDENT", "WS", "LINE_COMMENT", "MULTILINE_COMMENT", "FLOAT_CONST", 
      "INTEGER_CONST"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  bifangparserParserStaticData = staticData.release();
}

}

BIFANGParser::BIFANGParser(TokenStream *input) : BIFANGParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BIFANGParser::BIFANGParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BIFANGParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *bifangparserParserStaticData->atn, bifangparserParserStaticData->decisionToDFA, bifangparserParserStaticData->sharedContextCache, options);
}

BIFANGParser::~BIFANGParser() {
  delete _interpreter;
}

const atn::ATN& BIFANGParser::getATN() const {
  return *bifangparserParserStaticData->atn;
}

std::string BIFANGParser::getGrammarFileName() const {
  return "BIFANGParser.g4";
}

const std::vector<std::string>& BIFANGParser::getRuleNames() const {
  return bifangparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& BIFANGParser::getVocabulary() const {
  return bifangparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BIFANGParser::getSerializedATN() const {
  return bifangparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

BIFANGParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BIFANGParser::CompUnitContext* BIFANGParser::ProgramContext::compUnit() {
  return getRuleContext<BIFANGParser::CompUnitContext>(0);
}


size_t BIFANGParser::ProgramContext::getRuleIndex() const {
  return BIFANGParser::RuleProgram;
}

void BIFANGParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void BIFANGParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
    if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any BIFANGParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
    //判断visitor是否是BIFANGParserVisitor类型的实例，其派生类也算其实例
  if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
      //AbstractParseTreeVisitor的
    return visitor->visitChildren(this);
}

BIFANGParser::ProgramContext* BIFANGParser::program() {
  ProgramContext *_localctx =
          _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BIFANGParser::RuleProgram);
#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
      exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    compUnit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompUnitContext ------------------------------------------------------------------

BIFANGParser::CompUnitContext::CompUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BIFANGParser::CompUnitContext::EOF() {
  return getToken(BIFANGParser::EOF, 0);
}

std::vector<BIFANGParser::FuncDefContext *> BIFANGParser::CompUnitContext::funcDef() {
  return getRuleContexts<BIFANGParser::FuncDefContext>();
}

BIFANGParser::FuncDefContext* BIFANGParser::CompUnitContext::funcDef(size_t i) {
  return getRuleContext<BIFANGParser::FuncDefContext>(i);
}

std::vector<BIFANGParser::DeclContext *> BIFANGParser::CompUnitContext::decl() {
  return getRuleContexts<BIFANGParser::DeclContext>();
}

BIFANGParser::DeclContext* BIFANGParser::CompUnitContext::decl(size_t i) {
  return getRuleContext<BIFANGParser::DeclContext>(i);
}


size_t BIFANGParser::CompUnitContext::getRuleIndex() const {
  return BIFANGParser::RuleCompUnit;
}

void BIFANGParser::CompUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompUnit(this);
}

void BIFANGParser::CompUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompUnit(this);
}


std::any BIFANGParser::CompUnitContext::accept(tree::ParseTreeVisitor *visitor) {
      //向下转型
    if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitCompUnit(this);
  else
    return visitor->visitChildren(this);
}

BIFANGParser::CompUnitContext* BIFANGParser::compUnit() {
    CompUnitContext *_localctx = _tracker.createInstance<CompUnitContext>(_ctx, getState());
  enterRule(_localctx, 2, BIFANGParser::RuleCompUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(54);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(52);
        funcDef();
        break;
      }

      case 2: {
        setState(53);
        decl();
        break;
      }

      default:
        break;
      }
      setState(56); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 30) != 0));
    setState(58);
    match(BIFANGParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

BIFANGParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BIFANGParser::ConstDeclContext* BIFANGParser::DeclContext::constDecl() {
  return getRuleContext<BIFANGParser::ConstDeclContext>(0);
}

BIFANGParser::VarDeclContext* BIFANGParser::DeclContext::varDecl() {
  return getRuleContext<BIFANGParser::VarDeclContext>(0);
}


size_t BIFANGParser::DeclContext::getRuleIndex() const {
  return BIFANGParser::RuleDecl;
}

void BIFANGParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void BIFANGParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


std::any BIFANGParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

BIFANGParser::DeclContext* BIFANGParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, BIFANGParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BIFANGParser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(60);
        constDecl();
        break;
      }

      case BIFANGParser::INT:
      case BIFANGParser::FLOAT: {
        enterOuterAlt(_localctx, 2);
        setState(61);
        varDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclContext ------------------------------------------------------------------

BIFANGParser::ConstDeclContext::ConstDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BIFANGParser::ConstDeclContext::CONST() {
  return getToken(BIFANGParser::CONST, 0);
}

BIFANGParser::BTypeContext* BIFANGParser::ConstDeclContext::bType() {
  return getRuleContext<BIFANGParser::BTypeContext>(0);
}

std::vector<BIFANGParser::ConstDefContext *> BIFANGParser::ConstDeclContext::constDef() {
  return getRuleContexts<BIFANGParser::ConstDefContext>();
}

BIFANGParser::ConstDefContext* BIFANGParser::ConstDeclContext::constDef(size_t i) {
  return getRuleContext<BIFANGParser::ConstDefContext>(i);
}

tree::TerminalNode* BIFANGParser::ConstDeclContext::SEMICOLON() {
  return getToken(BIFANGParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> BIFANGParser::ConstDeclContext::COMMA() {
  return getTokens(BIFANGParser::COMMA);
}

tree::TerminalNode* BIFANGParser::ConstDeclContext::COMMA(size_t i) {
  return getToken(BIFANGParser::COMMA, i);
}


size_t BIFANGParser::ConstDeclContext::getRuleIndex() const {
  return BIFANGParser::RuleConstDecl;
}

void BIFANGParser::ConstDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDecl(this);
}

void BIFANGParser::ConstDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDecl(this);
}


std::any BIFANGParser::ConstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitConstDecl(this);
  else
    return visitor->visitChildren(this);
}

BIFANGParser::ConstDeclContext* BIFANGParser::constDecl() {
  ConstDeclContext *_localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, BIFANGParser::RuleConstDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(BIFANGParser::CONST);
    setState(65);
    bType();
    setState(66);
    constDef();
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BIFANGParser::COMMA) {
      setState(67);
      match(BIFANGParser::COMMA);
      setState(68);
      constDef();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(BIFANGParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BTypeContext ------------------------------------------------------------------

BIFANGParser::BTypeContext::BTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BIFANGParser::BTypeContext::INT() {
  return getToken(BIFANGParser::INT, 0);
}

tree::TerminalNode* BIFANGParser::BTypeContext::FLOAT() {
  return getToken(BIFANGParser::FLOAT, 0);
}


size_t BIFANGParser::BTypeContext::getRuleIndex() const {
  return BIFANGParser::RuleBType;
}

void BIFANGParser::BTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBType(this);
}

void BIFANGParser::BTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBType(this);
}


std::any BIFANGParser::BTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitBType(this);
  else
    return visitor->visitChildren(this);
}

BIFANGParser::BTypeContext* BIFANGParser::bType() {
  BTypeContext *_localctx = _tracker.createInstance<BTypeContext>(_ctx, getState());
  enterRule(_localctx, 8, BIFANGParser::RuleBType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _la = _input->LA(1);
    if (!(_la == BIFANGParser::INT

    || _la == BIFANGParser::FLOAT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDefContext ------------------------------------------------------------------

BIFANGParser::ConstDefContext::ConstDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BIFANGParser::ConstDefContext::IDENT() {
  return getToken(BIFANGParser::IDENT, 0);
}

tree::TerminalNode* BIFANGParser::ConstDefContext::ASSIGN() {
  return getToken(BIFANGParser::ASSIGN, 0);
}

BIFANGParser::ConstInitValContext* BIFANGParser::ConstDefContext::constInitVal() {
  return getRuleContext<BIFANGParser::ConstInitValContext>(0);
}

std::vector<tree::TerminalNode *> BIFANGParser::ConstDefContext::L_BRACKT() {
  return getTokens(BIFANGParser::L_BRACKT);
}

tree::TerminalNode* BIFANGParser::ConstDefContext::L_BRACKT(size_t i) {
  return getToken(BIFANGParser::L_BRACKT, i);
}

std::vector<BIFANGParser::ConstExpContext *> BIFANGParser::ConstDefContext::constExp() {
  return getRuleContexts<BIFANGParser::ConstExpContext>();
}

BIFANGParser::ConstExpContext* BIFANGParser::ConstDefContext::constExp(size_t i) {
  return getRuleContext<BIFANGParser::ConstExpContext>(i);
}

std::vector<tree::TerminalNode *> BIFANGParser::ConstDefContext::R_BRACKT() {
  return getTokens(BIFANGParser::R_BRACKT);
}

tree::TerminalNode* BIFANGParser::ConstDefContext::R_BRACKT(size_t i) {
  return getToken(BIFANGParser::R_BRACKT, i);
}


size_t BIFANGParser::ConstDefContext::getRuleIndex() const {
  return BIFANGParser::RuleConstDef;
}

void BIFANGParser::ConstDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDef(this);
}

void BIFANGParser::ConstDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDef(this);
}


std::any BIFANGParser::ConstDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitConstDef(this);
  else
    return visitor->visitChildren(this);
}

BIFANGParser::ConstDefContext* BIFANGParser::constDef() {
  ConstDefContext *_localctx = _tracker.createInstance<ConstDefContext>(_ctx, getState());
  enterRule(_localctx, 10, BIFANGParser::RuleConstDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(BIFANGParser::IDENT);
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BIFANGParser::L_BRACKT) {
      setState(79);
      match(BIFANGParser::L_BRACKT);
      setState(80);
      constExp();
      setState(81);
      match(BIFANGParser::R_BRACKT);
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(88);
    match(BIFANGParser::ASSIGN);
    setState(89);
    constInitVal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstInitValContext ------------------------------------------------------------------

BIFANGParser::ConstInitValContext::ConstInitValContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BIFANGParser::ConstExpContext* BIFANGParser::ConstInitValContext::constExp() {
  return getRuleContext<BIFANGParser::ConstExpContext>(0);
}

tree::TerminalNode* BIFANGParser::ConstInitValContext::L_BRACE() {
  return getToken(BIFANGParser::L_BRACE, 0);
}

tree::TerminalNode* BIFANGParser::ConstInitValContext::R_BRACE() {
  return getToken(BIFANGParser::R_BRACE, 0);
}

std::vector<BIFANGParser::ConstInitValContext *> BIFANGParser::ConstInitValContext::constInitVal() {
  return getRuleContexts<BIFANGParser::ConstInitValContext>();
}

BIFANGParser::ConstInitValContext* BIFANGParser::ConstInitValContext::constInitVal(size_t i) {
  return getRuleContext<BIFANGParser::ConstInitValContext>(i);
}

std::vector<tree::TerminalNode *> BIFANGParser::ConstInitValContext::COMMA() {
  return getTokens(BIFANGParser::COMMA);
}

tree::TerminalNode* BIFANGParser::ConstInitValContext::COMMA(size_t i) {
  return getToken(BIFANGParser::COMMA, i);
}


size_t BIFANGParser::ConstInitValContext::getRuleIndex() const {
  return BIFANGParser::RuleConstInitVal;
}

void BIFANGParser::ConstInitValContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstInitVal(this);
}

void BIFANGParser::ConstInitValContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstInitVal(this);
}


std::any BIFANGParser::ConstInitValContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitConstInitVal(this);
  else
    return visitor->visitChildren(this);
}

BIFANGParser::ConstInitValContext* BIFANGParser::constInitVal() {
  ConstInitValContext *_localctx = _tracker.createInstance<ConstInitValContext>(_ctx, getState());
  enterRule(_localctx, 12, BIFANGParser::RuleConstInitVal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BIFANGParser::PLUS:
      case BIFANGParser::MINUS:
      case BIFANGParser::NOT:
      case BIFANGParser::L_PAREN:
      case BIFANGParser::IDENT:
      case BIFANGParser::FLOAT_CONST:
      case BIFANGParser::INTEGER_CONST: {
        enterOuterAlt(_localctx, 1);
        setState(91);
        constExp();
        break;
      }

      case BIFANGParser::L_BRACE: {
        enterOuterAlt(_localctx, 2);
        setState(92);
        match(BIFANGParser::L_BRACE);
        setState(101);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 842157529088) != 0)) {
          setState(93);
          constInitVal();
          setState(98);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == BIFANGParser::COMMA) {
            setState(94);
            match(BIFANGParser::COMMA);
            setState(95);
            constInitVal();
            setState(100);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(103);
        match(BIFANGParser::R_BRACE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

BIFANGParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BIFANGParser::BTypeContext* BIFANGParser::VarDeclContext::bType() {
  return getRuleContext<BIFANGParser::BTypeContext>(0);
}

std::vector<BIFANGParser::VarDefContext *> BIFANGParser::VarDeclContext::varDef() {
  return getRuleContexts<BIFANGParser::VarDefContext>();
}

BIFANGParser::VarDefContext* BIFANGParser::VarDeclContext::varDef(size_t i) {
  return getRuleContext<BIFANGParser::VarDefContext>(i);
}

tree::TerminalNode* BIFANGParser::VarDeclContext::SEMICOLON() {
  return getToken(BIFANGParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> BIFANGParser::VarDeclContext::COMMA() {
  return getTokens(BIFANGParser::COMMA);
}

tree::TerminalNode* BIFANGParser::VarDeclContext::COMMA(size_t i) {
  return getToken(BIFANGParser::COMMA, i);
}


size_t BIFANGParser::VarDeclContext::getRuleIndex() const {
  return BIFANGParser::RuleVarDecl;
}

void BIFANGParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void BIFANGParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


std::any BIFANGParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BIFANGParserVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

BIFANGParser::VarDeclContext* BIFANGParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, BIFANGParser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    bType();
    setState(107);
    varDef();
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BIFANGParser::COMMA) {
      setState(108);
      match(BIFANGParser::COMMA);
      setState(109);
      varDef();
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(115);
    match(BIFANGParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

BIFANGParser::VarDefContext::VarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BIFANGParser::VarDefContext::IDENT() {
  return getToken(BIFANGParser::IDENT, 0);
}

std::vector<tree::TerminalNode *> BIFANGParser::VarDefContext::L_BRACKT() {
  return getTokens(BIFANGParser::L_BRACKT);
}

tree::TerminalNode* BIFANGParser::VarDefContext::L_BRACKT(size_t i) {
  return getToken(BIFANGParser::L_BRACKT, i);
}

std::vector<BIFANGParser::ConstExpContext *> BIFANGParser::VarDefContext::constExp() {
  return getRuleContexts<BIFANGParser::ConstExpContext>();
}

BIFANGParser::ConstExpContext* BIFANGParser::VarDefContext::constExp(size_t i) {
  return getRuleContext<BIFANGParser::ConstExpContext>(i);
}

std::vector<tree::TerminalNode *> BIFANGParser::VarDefContext::R_BRACKT() {
  return getTokens(BIFANGParser::R_BRACKT);
}

tree::TerminalNode* BIFANGParser::VarDefContext::R_BRACKT(size_t i) {
  return getToken(BIFANGParser::R_BRACKT, i);
}

tree::TerminalNode* BIFANGParser::VarDefContext::ASSIGN() {
  return getToken(BIFANGParser::ASSIGN, 0);
}

BIFANGParser::InitValContext* BIFANGParser::VarDefContext::initVal() {
  return getRuleContext<BIFANGParser::InitValContext>(0);
}


size_t BIFANGParser::VarDefContext::getRuleIndex() const {
  return BIFANGParser::RuleVarDef;
}

void BIFANGParser::VarDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDef(this);
}

void BIFANGParser::VarDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BIFANGParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDef(this);
}

